--- a/home.html
+++ b/home.html
@@ -698,6 +698,22 @@
 </div>
 </div>
 </main>
+<div class="fixed top-0 left-0 z-20 flex h-screen w-screen items-center justify-center">
+<div class="w-lg rounded-lg bg-white shadow-lg">
+<div class="flex items-center justify-between rounded-t-lg border-b border-gray-300 bg-[#f8f8f8] px-6 py-4">
+<p class="text-xl leading-6 font-semibold">Please Enter Your Password</p>
+<svg data-prefix="fas" data-icon="xmark" class="svg-inline--fa fa-xmark cursor-pointer hover:text-gray-600" role="img" viewBox="0 0 384 512" aria-hidden="true">
+<path fill="currentColor" d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"></path>
+</svg>
+</div>
+<div class="flex flex-col gap-4 px-6 py-4">
+<p class="text-base leading-6 text-[#212529bf]">For your security, you must enter your password to continue</p>
+<p class="font-bold text-[#212529]">Password</p>
+<input placeholder="Enter your password" class="w-full rounded-lg border border-gray-300 px-3 py-1.5" type="password" value="">
+<button class="rounded-lg bg-blue-500 px-3 py-1.5 text-white disabled:opacity-50" disabled="">Continue</button>
+</div>
+</div>
+</div>
 </div>
 </body>
 </html>
